[tool.poetry]
name = "amineUID"
version = "0.1.0"
description = "amineUID"
authors = ["Suwanyad"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = "4.12.3"
requests = "^2.32.3"
pillow = ">=9.2.0, <=10.2.0"
playwright = "^1.51.0"

[[tool.poetry.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
